# goddard

./: README.md
goddard/: Cargo.toml
goddard/crates/goddard-cli/: Cargo.toml
goddard/crates/goddard-cli/src/: main.rs
goddard/crates/goddard-core/: Cargo.toml
goddard/crates/goddard-core/src/: lib.rs  units.rs
goddard/crates/goddard-physics/: Cargo.toml
goddard/crates/goddard-physics/src/: constants.rs  fluid.rs  forces.rs  kinematics.rs  lib.rs  units.rs
goddard/crates/goddard-propulsion/: Cargo.toml
goddard/crates/goddard-propulsion/src/: engine.rs  lib.rs  propellant.rs
goddard/src/: main.rs  physics.rs  units.rs
